@@ -1,4 +1,8 @@
-﻿drkns 02.02.2016 21:17:56 +0200 - build 4533
+﻿drkns 02.02.2016 21:34:08 +0200 - build 4534
+
+1. Уточнение 4525 для нетривиальных условий запуска.
+
+drkns 02.02.2016 21:17:56 +0200 - build 4533
 
 1. Адаптация граббера к 4526.
 
